--- a/Frontend/src/pages/Home/allMachinery/index.scss
+++ b/Frontend/src/pages/Home/allMachinery/index.scss
@@ -18,6 +18,7 @@
         font-family: Inter;
         color: #363636;
         text-align: center;
+        margin-bottom: 10px;
 
         @media screen and (max-width: 500px) {
             font-size: 20px; 
